package SimplilearnProjectFile;

public class FileApplicationClient {
    public static void main(String[] args) {
        FileApplication fileApplication = new FileApplication();
        fileApplication.fileApplication();
    }
}
